Se agrego descripcion de las distribuciones: Binomial y Poisson

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Distribucion Binomial</h1>
-
+    <p>En teoría de la probabilidad y estadística, la distribución binomial o distribución binómica es una distribución de probabilidad discreta que cuenta el número de éxitos en una secuencia de n ensayos de Bernoulli independientes entre sí con una probabilidad fija p
+    de ocurrencia de éxito entre los ensayos. En la teoría de probabilidad y estadística, un ensayo de Bernoulli es un experimento aleatorio en el que sólo se pueden obtener dos resultados. Se denomina así en honor a Jakob Bernoulli.</p>
 
     <h1>Distribucion de Poisson</h1>
+
+    <p>En teoría de probabilidad y estadística, la distribución de Poisson es una distribución de probabilidad discreta que expresa, a partir de una frecuencia de ocurrencia media, la probabilidad de que ocurra un determinado número de eventos durante cierto período de tiempo. Concretamente, se especializa en la probabilidad de ocurrencia de sucesos con probabilidades muy pequeñas, o sucesos «raros». También puede utilizarse para contar el número de eventos o partículas consideradas puntuales en otros tipos de intervalos específicos, como la distancia, el área o el volumen.</p>
 </body>
 </html>
